--- a/Telecom_X2.ipynb
+++ b/Telecom_X2.ipynb
@@ -1631,38 +1631,21 @@
         "\n",
         "### **Recomendações Estratégicas**\n",
         "\n",
-        "* **Priorizar ações para clientes com contratos mensais** e cobranças mais altas, pois estão mais propensos a cancelar.\n",
-        "* **Criar incentivos para migração para planos com contratos de 1 ou 2 anos**, que apresentam menor probabilidade de churn.\n",
-        "* **Monitorar de perto clientes com baixo tempo de permanência** (tenure baixo) e oferecer benefícios para aumentar a fidelidade.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "### **Próximos Passos**\n",
-        "\n",
-        "* Testar modelos mais avançados como **XGBoost** e **LightGBM**, que podem trazer ganhos adicionais de performance.\n",
-        "* Realizar um **ajuste fino de hiperparâmetros** para otimizar os modelos.\n",
-        "* Desenvolver **sistemas de monitoramento em tempo real**, para identificar rapidamente clientes com alto risco de churn e acionar ofertas personalizadas.\n",
+        "* Priorizar ações para clientes com contratos mensais e cobranças mais altas, pois estão mais propensos a cancelar.\n",
+        "* Criar incentivos para migração para planos com contratos de 1 ou 2 anos, que apresentam menor probabilidade de churn.\n",
+        "* Monitorar de perto clientes com baixo tempo de permanência (tenure baixo) e oferecer benefícios para aumentar a fidelidade.\n",
         "\n",
         "---\n",
         "\n",
         "##  **Resumo Final**\n",
         "\n",
-        "Com essas ações, a empresa pode atuar **proativamente**, reduzindo a evasão, aumentando o tempo de permanência dos clientes e maximizando a receita.\n",
+        "Com essas ações, a empresa pode atuar proativamente, reduzindo a evasão, aumentando o tempo de permanência dos clientes e maximizando a receita.\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "YYe15Tumv3Ea"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "2AlZVSkrwHhy"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
