--- a/Telecom_X2.ipynb
+++ b/Telecom_X2.ipynb
@@ -1631,6 +1631,7 @@
         "\n",
         "### **Recomendações Estratégicas**\n",
         "\n",
+        "* Continuar investindo em canais de comunicação com os clientes, com o intuito de promover avaliações periódicas no início do relacionamento e obter feedbacks acerca da satisfação pelos serviços oferecidos.\n",
         "* Priorizar ações para clientes com contratos mensais e cobranças mais altas, pois estão mais propensos a cancelar.\n",
         "* Criar incentivos para migração para planos com contratos de 1 ou 2 anos, que apresentam menor probabilidade de churn.\n",
         "* Monitorar de perto clientes com baixo tempo de permanência (tenure baixo) e oferecer benefícios para aumentar a fidelidade.\n",
