--- a/Telecom_X2.ipynb
+++ b/Telecom_X2.ipynb
@@ -1622,14 +1622,14 @@
       "source": [
         "\n",
         "\n",
-        "### **Principais Achados**\n",
+        "### **Principais Percepções**\n",
         "\n",
         "* As variáveis que mais influenciam o churn foram: **tenure** (tempo de permanência), **MonthlyCharges** (cobranças mensais) e **Contract\\_Two year**, entre outras.\n",
         "* O modelo **Random Forest** apresentou o melhor desempenho, com uma **AUC elevada**, indicando boa capacidade de prever clientes propensos à evasão.\n",
         "\n",
         "---\n",
         "\n",
-        "### **Recomendações Estratégicas**\n",
+        "### **Recomendações**\n",
         "\n",
         "* Continuar investindo em canais de comunicação com os clientes, com o intuito de promover avaliações periódicas no início do relacionamento e obter feedbacks acerca da satisfação pelos serviços oferecidos.\n",
         "* Priorizar ações para clientes com contratos mensais e cobranças mais altas, pois estão mais propensos a cancelar.\n",
@@ -1638,9 +1638,9 @@
         "\n",
         "---\n",
         "\n",
-        "##  **Resumo Final**\n",
+        "##  **Conclusão**\n",
         "\n",
-        "Com essas ações, a empresa pode atuar proativamente, reduzindo a evasão, aumentando o tempo de permanência dos clientes e maximizando a receita.\n",
+        "Com essas ações recomendadas, a empresa pode atuar de maneira mais proativa e efetiva, obtendo redução na evasão, aumentando o tempo de permanência dos clientes e maximizando a receita.\n",
         "\n",
         "\n"
       ],
